Fixed menu hidden behind chessboard

--- a/assets/css/razchess.css
+++ b/assets/css/razchess.css
@@ -21,6 +21,7 @@ h1 {
     top: 0;
     padding: 12px;
     width: 100%;
+    z-index: 99999;
 }
 #status span {
     display: flex;
